Vertex Colors Bakinng error #44028

Closed
opened 2015-03-17 19:07:44 +01:00 by Roberto · 6 comments

System Information
Linux-x86_64 Gentoo - Nvidia GeForce GTX 680
Windows 8.1 64 bit - Nvidia GeForce 8600M GS

Blender Version
Broken: 2.70a f93bc76 - 2.71 9337574 - ... - 2.73a bbf09d9
Worked: 2.70 19e627c

Short description of error
From Blender 2.70a, baking the Vertex color of a model results in a darker color than the original one

Exact steps for others to reproduce the error
From the "vertex_color_error.blend" file:

  • Select both layer 1 and 2
  • Select both Original_Cube (first) and Second_Cube (last) (result: Original_Cube selected, Second_Cube selected and active)
  • Push the "Bake" button
  • Toggle between layer 1 (with Original_Cube) and layer 2 (with Second_Cube) to see the results

If you want to try it from scratch:

  • Make a Cube (or use default cube)
  • Go to edit mode
  • Subdivide the Cube as much as you want (I subdivided it 10 times plus another 4 times)
  • Now you can:
    • Duplicate the Cube
    • Add another Cube and Subdivide it
    • Duplicate the Cube and remesh the copy as you please (my step in real use case)
  • Move the Second Cube on another layer
  • Select Original Cube
  • Go to Vertex Paint mode choose a color you like (in my case is a light-brown)
  • Paint the cube randomly
  • Go back to Object Mode
  • Select the layer of the Second Cube
  • Select the Second Cube
  • Add a vertex color to the Second Cube
  • Select both layers with the Cubes
  • Select the Cubes in this order: Original Cube and Second Cube (final result -> Original Cube, selected and Second Cube, selected and active)
  • Go in the Render tab section Bake and set:
    • Bake mode: Vertex Colors
    • check "Bake to Vertex Color"
    • check "Selected to Active"
  • Click the "Bake" button
  • Select "Texture" in the Viewport Shading menu
  • See the results alternating the layers

vertex_color_error.blend

P.S.: Sorry for my bad English language.

**System Information** Linux-x86_64 Gentoo - Nvidia GeForce GTX 680 Windows 8.1 64 bit - Nvidia GeForce 8600M GS **Blender Version** Broken: 2.70a f93bc76 - 2.71 9337574 - ... - 2.73a bbf09d9 Worked: 2.70 19e627c **Short description of error** From Blender 2.70a, baking the Vertex color of a model results in a darker color than the original one **Exact steps for others to reproduce the error** From the "vertex_color_error.blend" file: - Select both layer 1 and 2 - Select both Original_Cube (first) and Second_Cube (last) (result: Original_Cube selected, Second_Cube selected and active) - Push the "Bake" button - Toggle between layer 1 (with Original_Cube) and layer 2 (with Second_Cube) to see the results If you want to try it from scratch: - Make a Cube (or use default cube) - Go to edit mode - Subdivide the Cube as much as you want (I subdivided it 10 times plus another 4 times) - Now you can: - Duplicate the Cube - Add another Cube and Subdivide it - Duplicate the Cube and remesh the copy as you please (my step in real use case) - Move the Second Cube on another layer - Select Original Cube - Go to Vertex Paint mode choose a color you like (in my case is a light-brown) - Paint the cube randomly - Go back to Object Mode - Select the layer of the Second Cube - Select the Second Cube - Add a vertex color to the Second Cube - Select both layers with the Cubes - Select the Cubes in this order: Original Cube and Second Cube (final result -> Original Cube, selected and Second Cube, selected and active) - Go in the Render tab section Bake and set: - Bake mode: Vertex Colors - check "Bake to Vertex Color" - check "Selected to Active" - Click the "Bake" button - Select "Texture" in the Viewport Shading menu - See the results alternating the layers [vertex_color_error.blend](https://archive.blender.org/developer/F152424/vertex_color_error.blend) P.S.: Sorry for my bad English language.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Tarthesos

Added subscriber: @Tarthesos

This issue was referenced by 63897304a9

This issue was referenced by 63897304a90a8b13304771af0f466f6d13cb9227

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 63897304a9.

Closed by commit 63897304a9.
Author

It's the first time I signal a bug so I really don't know how it works and if I'm doing the right thing but...
Thanks for fixing the bug so quickly! :-)

It's the first time I signal a bug so I really don't know how it works and if I'm doing the right thing but... Thanks for fixing the bug so quickly! :-)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44028
No description provided.