Fix T44028: Vertex Colors Baking error

Was wrong color management flag used for some bakers.
Actually goes back to 7997e38.