source/blender/render/intern/source/bake.c
@@ -984,8 +984,12 @@ int RE_bake_shade_all_selected(Render *re, int type, Object *actob, short *do_up
 	int a, vdone = false, result = BAKE_RESULT_OK;
 	bool use_mask = false;
 	bool use_displacement_buffer = false;
-	bool do_manage = BKE_scene_check_color_management_enabled(re->scene);
-	
+	bool do_manage = false;
+
+	if (ELEM(type, RE_BAKE_ALL, RE_BAKE_TEXTURE)) {
+		do_manage = BKE_scene_check_color_management_enabled(re->scene);
+	}
+
 	re->scene_color_manage = BKE_scene_check_color_management_enabled(re->scene);
 	
 	/* initialize render global */
